// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search should show cross icon when input value exists 1`] = `
<Search
  placeholder=""
  value=""
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="fishd-input"
      type="text"
      value=""
    >
      <input
        className="fishd-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value=""
      />
    </Input>
    <span
      className="undefined-action"
    >
      <Icon
        type="search"
      >
        <i
          className="fishdicon fishdicon-search"
        />
      </Icon>
    </span>
  </div>
</Search>
`;

exports[`Search should show cross icon when input value exists 2`] = `
<Search
  placeholder=""
  value="a"
>
  <div>
    <Input
      disabled={false}
      onChange={[Function]}
      placeholder=""
      prefixCls="fishd-input"
      type="text"
      value="a"
    >
      <input
        className="fishd-input"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="a"
      />
    </Input>
    <a
      className="undefined-action"
      href="#"
      onClick={[Function]}
    >
      <Icon
        type="cross-circle"
      >
        <i
          className="fishdicon fishdicon-cross-circle"
        />
      </Icon>
    </a>
  </div>
</Search>
`;
